cleanup/cleanup-bare-pods/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bare-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.14.1
