cleanup/cleanup-bare-pods/.chainsaw-test/chainsaw-step-02-assert-1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterCleanupPolicy
metadata:
  name: clean-bare-pods
